--- a/SchetsPlus/Properties/Resources.resx
+++ b/SchetsPlus/Properties/Resources.resx
@@ -136,8 +136,8 @@
   <data name="tekst" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cirkel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cirkel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ellips" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ellips.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="rondje" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rondje.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
